--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "market",
-    "appid" : "",
+    "appid" : "__UNI__2C3B4E9",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -54,7 +54,14 @@
         "setting" : {
             "urlCheck" : false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+		"requiredPrivateInfos" : [ "chooseLocation", "getLocation","chooseAddress" ],
+		"permission": {
+		  "scope.userLocation": {
+			"desc": "你的位置信息将用来进行接口调试"
+			}
+		}
+		
     },
     "vueVersion" : "2"
 }
